fix using Korean fonts and add some shortcuts